[gd_scene load_steps=10 format=3 uid="uid://brbldat0qnjvh"]

[ext_resource type="Script" path="res://Scripts/challenge_1.gd" id="1_px221"]
[ext_resource type="Texture2D" uid="uid://drw315ju84ks3" path="res://Art/star_background.jpg" id="2_aqpb2"]
[ext_resource type="TileSet" uid="uid://da3qv5bqnia2y" path="res://Scenes/tilemap_world.tres" id="3_hwncl"]
[ext_resource type="Script" path="res://Scripts/World_TileMap.gd" id="4_yvx66"]
[ext_resource type="PackedScene" uid="uid://cgax0tyixs3og" path="res://Scenes/pause_menu.tscn" id="5_r6uqi"]
[ext_resource type="PackedScene" uid="uid://mx5gsy2v5cj0" path="res://Scenes/game_over.tscn" id="6_7bv8x"]
[ext_resource type="PackedScene" uid="uid://dx8j1h6gp20xq" path="res://Scenes/clock.tscn" id="7_gur5s"]
[ext_resource type="PackedScene" uid="uid://cgchxlrwd55ih" path="res://Scenes/debug_menu.tscn" id="8_opicu"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_e0lhj"]
vertices = PackedVector2Array(8694, 7754, 8694, 8342, 8630, 8342, 8618, 7766, 8630, 8438, 8618, 8438, 8534, 7754, 8522, 7766, 8522, 7510, 8534, 7498, 8298, 7498, 8298, 7510, 6998, 6762, 7190, 6762, 7190, 6826, 7446, 6826, 7446, 6890, 7318, 7158, 7222, 7254, 7510, 6890, 7510, 7158, 7318, 7254, 7222, 7414, 6998, 7414, 6314, 7018, 6314, 6934, 6378, 6762, 6998, 7510, 6614, 7510, 6262, 7018, 6614, 7638, 6218, 7638, 6218, 6986, 6262, 6986, 6218, 6934, 6218, 6762, 6378, 6698, 6998, 6698, 7542, 7210, 7542, 7222, 7382, 7222, 7370, 7210, 7370, 7254, 7382, 7254, 6230, 8214, 6058, 8214, 6058, 8202, 6230, 8202, 6390, 7818, 6518, 7818, 6518, 7990, 6390, 7990, 6390, 8054, 6230, 8054, 6154, 7818, 6230, 8150, 6026, 8150, 6026, 8054, 5994, 8054, 5994, 8022, 5962, 8022, 5962, 7926, 5930, 7926, 5930, 7818, 6154, 7754, 6390, 7754, 5846, 9174, 5194, 9174, 5482, 9098, 5846, 9014, 5398, 9098, 5194, 9014, 5398, 9014, 6198, 8662, 6070, 8854, 5482, 8982, 5718, 8202, 5942, 8266, 6006, 8298, 4746, 8310, 5238, 7882, 5398, 7882, 5398, 7978, 4906, 8534, 4746, 8534, 5718, 7978, 5002, 8694, 4906, 8694, 5942, 8202, 6006, 8266, 6250, 8298, 6250, 8234, 6486, 8234, 6486, 8330, 6378, 8662, 6998, 8330, 6998, 8694, 6934, 8694, 6934, 8950, 6678, 8950, 6410, 8810, 6410, 8758, 6678, 9078, 6378, 9078, 6378, 8810, 6378, 8758, 6198, 8854, 6070, 9014, 5430, 8982, 5430, 9014, 5098, 9014, 5098, 8886, 5002, 8886, 4618, 8310, 4618, 7978, 4682, 7978, 4682, 7926, 4618, 7926, 4618, 7850, 4714, 7850, 4714, 7690, 5238, 7690, 7734, 9418, 7734, 9590, 7670, 9590, 6954, 9514, 7510, 9418, 1514, 12618, 15811, 16700, 171, 16249, 1110, 12618, 7542, 8778, 7542, 9130, 7466, 8970, 7510, 8778, 16579, 338, 9418, 8906, 9418, 8438, 7178, 9130, 7178, 9014, 7286, 9046, 7286, 9226, 8938, 9482, 8202, 9802, 8202, 9750, 8714, 9546, 7510, 8362, 7466, 8502, 7478, 8362, 78, 21, 1110, 9398, 4874, 7018, 4874, 6966, 6166, 6710, 6166, 7690, 7510, 9258, 6954, 9398, 7318, 9258, 9386, 8438, 9386, 8182, 9322, 8182, 9322, 7862, 9258, 7862, 9258, 7670, 9162, 7670, 9162, 7222, 9066, 7222, 9066, 7158, 9034, 7158, 9034, 6870, 8886, 6870, 8886, 6998, 8758, 6998, 8758, 7062, 8630, 7062, 8630, 7126, 7926, 7126, 7530, 6774, 7926, 7434, 8278, 7434, 8278, 7446, 7606, 7446, 7606, 7510, 7402, 7510, 7402, 7446, 7370, 7446, 7370, 7338, 7402, 7338, 7434, 7306, 7562, 7274, 7702, 7350, 7702, 7434, 7402, 7306, 7434, 7274, 7562, 7242, 7594, 7242, 7594, 7210, 7626, 7210, 7830, 7350, 7626, 7178, 7830, 7178, 7850, 7434, 7850, 7402, 7882, 7402, 7606, 7126, 7606, 7158, 7574, 7158, 7562, 6838, 7574, 7190, 7562, 7190, 7530, 6838, 7274, 6774, 7274, 6742, 7242, 6742, 7242, 6710, 7050, 6710, 7050, 6646, 6326, 6646, 6326, 6710, 6666, 7690, 6666, 7562, 7050, 7562, 7050, 7466, 7274, 7466, 7338, 7306, 7338, 7274, 7350, 7274, 7350, 7318, 7318, 7318, 7274, 7306, 7318, 7466, 7350, 7466, 7350, 7562, 6570, 7766, 7658, 7562, 7658, 7498, 7702, 7498, 7702, 7606, 7574, 7606, 7574, 7766, 7478, 7766, 7050, 8502, 7050, 8278, 6538, 8278, 6538, 8182, 6570, 8074, 6282, 8182, 6282, 8106, 6410, 8106, 6410, 8074, 6442, 7766, 6442, 7702, 4822, 7018, 6102, 7702, 6102, 7734, 5846, 7734, 5354, 7606, 5846, 7946, 5910, 7946, 5910, 8042, 5942, 8042, 5942, 8074, 5770, 8118, 5974, 8074, 5974, 8150, 5962, 8150, 5962, 8118, 5770, 7926, 5450, 7830, 5450, 7926, 5354, 7830, 4662, 7606, 4662, 7670, 4534, 7670, 4534, 8330, 4566, 8330, 4566, 8554, 4694, 8554, 4694, 8630, 4630, 8630, 4630, 8714, 4854, 8714, 4854, 8906, 1514, 9398, 4982, 8906, 4982, 9034, 5078, 9034, 5078, 9194, 5142, 9194, 5142, 9226, 5898, 9226, 5898, 9066, 6122, 9066, 6122, 8938, 6198, 8938, 6198, 9066, 6326, 9066, 6326, 9130, 6730, 9130, 6730, 9002, 6986, 9002, 6986, 8746, 7018, 8746, 7030, 8810, 7030, 8854, 7018, 8714, 7030, 8714, 7062, 8810, 7062, 8854, 7030, 8970, 7094, 8970, 7094, 9002, 7146, 8950, 7114, 8950, 7114, 8554, 7414, 8554, 7382, 8918, 7414, 8918, 7382, 8950, 7350, 8950, 7146, 9002, 7350, 9002, 7318, 9014, 7402, 9002, 7402, 8970, 7722, 9078, 7594, 9078, 7594, 8726, 7562, 8726, 7562, 8310, 7530, 8310, 7530, 7850, 7626, 7850, 8566, 8490, 7626, 7658, 7754, 7658, 8470, 7818, 7754, 7530, 8246, 7530, 8246, 7594, 8470, 7594, 8566, 7818, 8682, 8490, 8682, 8394, 8746, 8394, 9334, 8490, 9302, 8854, 9206, 9078, 8854, 9270, 8746, 7754, 8778, 7754, 8778, 7702, 8586, 7702, 8586, 7446, 8682, 7178, 8810, 7114, 8982, 7210, 9014, 7274, 8330, 7446, 8330, 7382, 7978, 7382, 7978, 7178, 8682, 7114, 8810, 7050, 8938, 7050, 8938, 6954, 8982, 6954, 9014, 7210, 9110, 7274, 9110, 7722, 9206, 7722, 9206, 7914, 9270, 7914, 9270, 8234, 9334, 8234, 9366, 8490, 9366, 8854, 9302, 9078, 9206, 9270, 8854, 9322, 8918, 9322, 8918, 9366, 8886, 9366, 8886, 9430, 8662, 9430, 8662, 9494, 8406, 9494, 8406, 9526, 8298, 9526, 8298, 9494, 8042, 9494, 8042, 9430, 7978, 9430, 7978, 9366, 7914, 9366, 7914, 9334, 7786, 9334, 7786, 9302, 7574, 9354, 7734, 9354, 7734, 9366, 7562, 9366, 7562, 9206, 7574, 9302, 7338, 9206, 7338, 9066, 7370, 9066, 7318, 9046, 7126, 9014, 7126, 9078, 7062, 9078, 7062, 9206, 7030, 9206, 7030, 9238, 6518, 9238, 6518, 9430, 6454, 9430, 6454, 9482, 6486, 9482, 6486, 9494, 6390, 9494, 6390, 9994, 6422, 9994, 6422, 10026, 6730, 9974, 6442, 9974, 6442, 9738, 6570, 9738, 6570, 9686, 6442, 9686, 6442, 9546, 6538, 9546, 6538, 9482, 6570, 9482, 6742, 9514, 6922, 10102, 7082, 9290, 7082, 9226, 7114, 9226, 7114, 9130, 7318, 9226, 7018, 10454, 7670, 10218, 7702, 10218, 7702, 10410, 7018, 10518, 7734, 10410, 7734, 10518, 6922, 10454, 6922, 10294, 6858, 10294, 6858, 10154, 6922, 10154, 6710, 10154, 6806, 10154, 6806, 10314, 6838, 10314, 6838, 10346, 6870, 10346, 6870, 10474, 6902, 10474, 6902, 10506, 6966, 10506, 6966, 10538, 6998, 10538, 6998, 10570, 7754, 10570, 7754, 10538, 7786, 10538, 7990, 9546, 8150, 9750, 8150, 9802, 7786, 10390, 7754, 10390, 7754, 10198, 7786, 9642, 7926, 9482, 7722, 10198, 7722, 9642, 7786, 9386, 7862, 9386, 7862, 9418, 7926, 9418, 7990, 9482, 8278, 9546, 8278, 9578, 8426, 9578, 8426, 9546, 8714, 9482, 8938, 9418, 8970, 9418, 8970, 9322, 9258, 9322, 9258, 9162, 9354, 9162, 9354, 8906, 7882, 7126, 6570, 9290, 6742, 9398, 6730, 10026, 6710, 10102, 7370, 9014, 4822, 6966, 7722, 9130)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(2, 4, 5, 3), PackedInt32Array(6, 0, 3, 7), PackedInt32Array(6, 7, 8, 9), PackedInt32Array(10, 9, 8, 11), PackedInt32Array(12, 13, 14), PackedInt32Array(14, 15, 16, 17, 18), PackedInt32Array(16, 19, 20, 17), PackedInt32Array(17, 21, 18), PackedInt32Array(12, 14, 18, 22, 23, 24, 25, 26), PackedInt32Array(24, 23, 27, 28, 29), PackedInt32Array(28, 30, 31, 32, 29), PackedInt32Array(32, 33, 29), PackedInt32Array(25, 34, 35, 26), PackedInt32Array(26, 36, 37, 12), PackedInt32Array(38, 39, 40, 41), PackedInt32Array(42, 41, 40, 43), PackedInt32Array(44, 45, 46, 47), PackedInt32Array(48, 49, 50, 51), PackedInt32Array(51, 52, 53, 54), PackedInt32Array(53, 55, 56, 57, 54), PackedInt32Array(57, 58, 59), PackedInt32Array(59, 60, 61), PackedInt32Array(61, 62, 63, 54), PackedInt32Array(54, 64, 65, 48), PackedInt32Array(54, 48, 51), PackedInt32Array(61, 54, 57, 59), PackedInt32Array(66, 67, 68, 69), PackedInt32Array(70, 68, 67), PackedInt32Array(70, 67, 71, 72), PackedInt32Array(73, 74, 69, 68, 75, 76, 77, 78), PackedInt32Array(79, 80, 81, 82, 83, 84), PackedInt32Array(83, 82, 85, 76, 86, 87), PackedInt32Array(76, 88, 77), PackedInt32Array(77, 89, 78), PackedInt32Array(90, 91, 92, 93, 94), PackedInt32Array(93, 95, 96, 97), PackedInt32Array(93, 97, 98, 99, 100, 101), PackedInt32Array(99, 102, 103, 104, 100), PackedInt32Array(101, 105, 94, 93), PackedInt32Array(90, 94, 73, 78), PackedInt32Array(73, 106, 74), PackedInt32Array(74, 107, 69), PackedInt32Array(108, 109, 72), PackedInt32Array(71, 110, 111, 76), PackedInt32Array(111, 112, 86, 76), PackedInt32Array(79, 113, 114, 115), PackedInt32Array(116, 117, 118, 119, 80), PackedInt32Array(119, 120, 121, 80), PackedInt32Array(115, 116, 80, 79), PackedInt32Array(72, 71, 76, 108), PackedInt32Array(75, 108, 76), PackedInt32Array(122, 123, 124, 125, 126), PackedInt32Array(127, 128, 129, 130), PackedInt32Array(131, 132, 133, 134), PackedInt32Array(135, 128, 136, 137), PackedInt32Array(138, 139, 140, 141), PackedInt32Array(142, 128, 143, 144, 145), PackedInt32Array(146, 134, 133, 147, 148), PackedInt32Array(130, 129, 149, 150), PackedInt32Array(151, 152, 153, 154), PackedInt32Array(155, 126, 125, 156, 157), PackedInt32Array(137, 158, 159, 135), PackedInt32Array(159, 160, 161, 135), PackedInt32Array(161, 162, 163, 135), PackedInt32Array(163, 164, 165, 135), PackedInt32Array(165, 166, 167, 135), PackedInt32Array(167, 168, 169, 135), PackedInt32Array(170, 171, 172, 149), PackedInt32Array(172, 173, 174, 149), PackedInt32Array(149, 174, 175, 176, 177), PackedInt32Array(178, 179, 180, 181), PackedInt32Array(181, 182, 183, 184), PackedInt32Array(184, 185, 186, 187), PackedInt32Array(181, 184, 187, 188, 189, 190, 191), PackedInt32Array(187, 192, 188), PackedInt32Array(188, 193, 189), PackedInt32Array(189, 194, 195, 190), PackedInt32Array(190, 195, 196, 197, 198), PackedInt32Array(197, 199, 200, 198), PackedInt32Array(201, 202, 203, 178), PackedInt32Array(204, 205, 206, 207), PackedInt32Array(206, 208, 209, 207), PackedInt32Array(207, 210, 177), PackedInt32Array(177, 211, 212), PackedInt32Array(212, 213, 214), PackedInt32Array(214, 215, 216), PackedInt32Array(217, 218, 153, 149), PackedInt32Array(219, 220, 221), PackedInt32Array(221, 222, 223), PackedInt32Array(224, 225, 226, 227), PackedInt32Array(224, 227, 228, 229), PackedInt32Array(223, 229, 228, 230), PackedInt32Array(230, 231, 232, 233, 221), PackedInt32Array(234, 235, 236, 237), PackedInt32Array(234, 237, 238, 232), PackedInt32Array(238, 239, 240, 232), PackedInt32Array(148, 147, 241, 242, 240), PackedInt32Array(242, 243, 244, 245, 240), PackedInt32Array(244, 246, 247, 248), PackedInt32Array(248, 249, 245, 244), PackedInt32Array(233, 250, 251, 219), PackedInt32Array(252, 253, 254, 255, 256), PackedInt32Array(257, 258, 259), PackedInt32Array(259, 260, 261, 262), PackedInt32Array(263, 264, 265, 266), PackedInt32Array(261, 263, 266, 262), PackedInt32Array(259, 262, 267, 257), PackedInt32Array(255, 257, 267, 268, 256), PackedInt32Array(267, 269, 268), PackedInt32Array(268, 270, 256), PackedInt32Array(271, 272, 273), PackedInt32Array(274, 275, 276), PackedInt32Array(276, 277, 278, 279), PackedInt32Array(280, 281, 282, 283), PackedInt32Array(282, 284, 285, 283), PackedInt32Array(285, 286, 287, 283), PackedInt32Array(287, 288, 289, 283), PackedInt32Array(290, 291, 292), PackedInt32Array(292, 293, 294, 295), PackedInt32Array(295, 296, 297, 290), PackedInt32Array(298, 299, 300), PackedInt32Array(300, 301, 302, 303, 304), PackedInt32Array(302, 305, 306, 303), PackedInt32Array(303, 307, 308, 304), PackedInt32Array(300, 304, 309), PackedInt32Array(309, 310, 311, 300), PackedInt32Array(312, 313, 314, 315, 316), PackedInt32Array(315, 317, 316), PackedInt32Array(316, 318, 319), PackedInt32Array(312, 316, 319, 320), PackedInt32Array(320, 319, 321, 322, 139), PackedInt32Array(323, 324, 133, 132), PackedInt32Array(325, 326, 327), PackedInt32Array(327, 328, 329), PackedInt32Array(329, 330, 331, 332), PackedInt32Array(333, 332, 334, 335, 336), PackedInt32Array(335, 337, 338, 339), PackedInt32Array(339, 340, 336, 335), PackedInt32Array(336, 341, 333), PackedInt32Array(342, 343, 344, 345, 346, 347, 348), PackedInt32Array(344, 349, 350), PackedInt32Array(351, 352, 353, 354, 355, 356, 357), PackedInt32Array(353, 358, 359, 354), PackedInt32Array(359, 360, 361, 354), PackedInt32Array(354, 362, 355), PackedInt32Array(355, 363, 364, 356), PackedInt32Array(364, 365, 366, 356), PackedInt32Array(356, 367, 357), PackedInt32Array(351, 357, 368, 369, 350), PackedInt32Array(369, 370, 371, 344, 350), PackedInt32Array(371, 372, 373, 344), PackedInt32Array(373, 374, 345, 344), PackedInt32Array(345, 375, 376, 346), PackedInt32Array(346, 377, 347), PackedInt32Array(347, 378, 348), PackedInt32Array(379, 380, 381, 382), PackedInt32Array(382, 383, 384, 379), PackedInt32Array(384, 385, 386, 333), PackedInt32Array(386, 387, 388, 389), PackedInt32Array(389, 390, 391, 333), PackedInt32Array(391, 392, 393, 333), PackedInt32Array(393, 394, 395, 333), PackedInt32Array(395, 396, 397, 333), PackedInt32Array(398, 399, 400, 401), PackedInt32Array(398, 401, 402, 403), PackedInt32Array(402, 404, 405, 406), PackedInt32Array(322, 407, 140, 139), PackedInt32Array(408, 409, 410), PackedInt32Array(410, 411, 412), PackedInt32Array(412, 413, 414), PackedInt32Array(290, 414, 415, 416, 283, 289), PackedInt32Array(417, 418, 419, 420), PackedInt32Array(421, 422, 423), PackedInt32Array(424, 425, 426, 427), PackedInt32Array(428, 429, 430, 431), PackedInt32Array(428, 431, 432, 433, 434, 435), PackedInt32Array(436, 437, 438), PackedInt32Array(438, 439, 138, 141), PackedInt32Array(141, 440, 157, 156, 436), PackedInt32Array(441, 442, 443, 444, 445), PackedInt32Array(444, 446, 447, 445), PackedInt32Array(442, 441, 448, 449, 125, 124), PackedInt32Array(449, 450, 451, 452), PackedInt32Array(453, 454, 455), PackedInt32Array(455, 456, 457), PackedInt32Array(457, 458, 459), PackedInt32Array(459, 460, 461), PackedInt32Array(461, 462, 463), PackedInt32Array(463, 464, 465), PackedInt32Array(466, 467, 468, 128), PackedInt32Array(469, 470, 471, 472, 473, 474, 475, 476), PackedInt32Array(474, 477, 478, 475), PackedInt32Array(475, 479, 480, 481), PackedInt32Array(481, 482, 476, 475), PackedInt32Array(476, 483, 469), PackedInt32Array(469, 484, 485, 144, 470), PackedInt32Array(486, 487, 145), PackedInt32Array(145, 488, 142), PackedInt32Array(486, 145, 144), PackedInt32Array(485, 486, 144), PackedInt32Array(142, 489, 490, 128), PackedInt32Array(490, 491, 492, 128), PackedInt32Array(492, 493, 494, 128), PackedInt32Array(494, 495, 136, 128), PackedInt32Array(125, 449, 452), PackedInt32Array(125, 452, 435), PackedInt32Array(434, 125, 435), PackedInt32Array(276, 283, 150, 149, 274), PackedInt32Array(397, 403, 402), PackedInt32Array(496, 204, 207), PackedInt32Array(416, 417, 420, 283), PackedInt32Array(149, 135, 169, 170), PackedInt32Array(128, 127, 283, 465), PackedInt32Array(240, 245, 233, 232), PackedInt32Array(410, 412, 414), PackedInt32Array(436, 438, 141), PackedInt32Array(497, 436, 156, 498), PackedInt32Array(433, 497, 498, 434), PackedInt32Array(427, 428, 435, 424), PackedInt32Array(499, 424, 435), PackedInt32Array(499, 435, 500, 423), PackedInt32Array(423, 500, 453, 283), PackedInt32Array(348, 379, 384, 333, 342), PackedInt32Array(333, 386, 389), PackedInt32Array(472, 471, 143, 128, 468), PackedInt32Array(397, 402, 406, 501, 132), PackedInt32Array(329, 332, 333, 397, 325), PackedInt32Array(276, 279, 280, 283), PackedInt32Array(177, 212, 214), PackedInt32Array(465, 466, 128), PackedInt32Array(463, 465, 283, 461), PackedInt32Array(459, 461, 283), PackedInt32Array(457, 459, 283, 455), PackedInt32Array(453, 455, 283), PackedInt32Array(421, 423, 283), PackedInt32Array(420, 421, 283), PackedInt32Array(290, 292, 295), PackedInt32Array(408, 410, 414, 298), PackedInt32Array(252, 151, 154, 253), PackedInt32Array(298, 300, 311), PackedInt32Array(221, 223, 230), PackedInt32Array(219, 221, 233), PackedInt32Array(154, 219, 251, 253), PackedInt32Array(252, 256, 271), PackedInt32Array(502, 252, 271, 273, 149), PackedInt32Array(496, 207, 177, 176), PackedInt32Array(298, 311, 320, 408), PackedInt32Array(325, 327, 329), PackedInt32Array(503, 325, 397), PackedInt32Array(132, 503, 397), PackedInt32Array(323, 132, 501), PackedInt32Array(321, 323, 501, 322), PackedInt32Array(320, 139, 408), PackedInt32Array(297, 298, 414, 290), PackedInt32Array(273, 274, 149), PackedInt32Array(152, 502, 149, 153), PackedInt32Array(216, 217, 149), PackedInt32Array(214, 216, 149, 177), PackedInt32Array(496, 176, 178, 203), PackedInt32Array(201, 178, 181), PackedInt32Array(201, 181, 191)])
outlines = Array[PackedVector2Array]([PackedVector2Array(68, 11, 16590, 329, 15821, 16711, 162, 16259)])
source_geometry_mode = 1
source_geometry_group_name = &"navigation"
cell_size = 32.0

[node name="Challenge1" type="Node2D"]
script = ExtResource("1_px221")

[node name="StarBackground" type="Sprite2D" parent="."]
position = Vector2(18, -82)
scale = Vector2(0.469708, 0.469708)
texture = ExtResource("2_aqpb2")

[node name="World_TileMap" type="TileMap" parent="." groups=["navigation"]]
tile_set = ExtResource("3_hwncl")
rendering_quadrant_size = 32
format = 2
layer_1/tile_data = PackedInt32Array()
script = ExtResource("4_yvx66")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="World_TileMap"]
visible = false
navigation_polygon = SubResource("NavigationPolygon_e0lhj")

[node name="Life" type="Node2D" parent="."]
process_mode = 1
z_as_relative = false
y_sort_enabled = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="FPS" type="Label" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = " FPS"
metadata/_edit_use_anchors_ = true

[node name="Tuto2" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -205.0
offset_bottom = 283.0
grow_horizontal = 0
text = "W,A,S,D : Move
P : ADD 100 max grass
R: Attack
SPACE: pick-up
X: drop
C: eat


-----DEBUG-------
mouse wheel: zoom in/out
Q/E : add/remove energy
T: teleport"
metadata/_edit_use_anchors_ = true

[node name="SleepButton" type="Button" parent="UI"]
visible = false
offset_left = 403.0
offset_top = 8.0
offset_right = 501.0
offset_bottom = 39.0
mouse_filter = 1
text = "Sleep Mode"

[node name="Pause_menu" parent="UI" instance=ExtResource("5_r6uqi")]
process_mode = 3
visible = false
mouse_filter = 1

[node name="GameOver" parent="UI" instance=ExtResource("6_7bv8x")]
visible = false
mouse_filter = 1

[node name="Clock" parent="UI" instance=ExtResource("7_gur5s")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -102.0
offset_top = 0.0
offset_right = -102.0
offset_bottom = 0.0
grow_vertical = 1
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Debug_Menu" parent="UI" instance=ExtResource("8_opicu")]
process_mode = 3
visible = false
mouse_filter = 2

[node name="Label_annoncemnt" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -97.5
offset_right = 34.5
offset_bottom = -42.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
metadata/_edit_use_anchors_ = true

[node name="DayCount" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="UI/DayCount"]

[node name="Score" type="Label" parent="UI"]
offset_left = 556.0
offset_top = 52.0
offset_right = 596.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 25

[node name="DayTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 15.0
one_shot = true

[node name="NightTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 5.0
one_shot = true

[node name="BlockTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 2.0
autostart = true

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
energy = 0.0
blend_mode = 1

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_speed = 10.0

[connection signal="timeout" from="UI/DayCount/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DayTimer" to="." method="_on_day_timer_timeout"]
[connection signal="timeout" from="NightTimer" to="." method="_on_night_timer_timeout"]
[connection signal="timeout" from="BlockTimer" to="World_TileMap" method="_on_block_timer_timeout"]
